# 4digits

./: .gitignore  4digits.rc  CMakeLists.txt  README.md
snap/: snapcraft.yaml
src/: 4DigitsAPI.cpp  4DigitsAPI.h  Game.cpp  Launcher.cpp  Random.cpp  Random.h  Utilities.cpp  Utilities.h  main.cpp
